ajustado regras de cache
